# Iteration-Methods-Solving

./: CMakeLists.txt  README.md
include/: ArithmeticRestriction.h  IterationMethod.h  Matrix.h  Matrix_impl.inl  SimpleIterationMethod.h
src/: Matrix.cpp  main.cpp  main.py
src/GaussZeidel/: __init__.py  gauss_zeidel.py
src/GivensRotation/: QRDecomposition.py  __init__.py  givens_mul.py
src/Graphs/: Expanders.py  Isomorphism.py  __init__.py
src/HHTransform/: QRDecomposition.py  __init__.py  householder_mul.py
src/QRAlgorithm/: FastQRAlgo.py  QRAlgo.py  __init__.py
src/SIM/: __init__.py  simple_iteration.py  simple_iteration_method.py
src/Tridiagonal/: QRDecomposition.py  __init__.py  tridiagonalization.py
src/tasks/: __init__.py
src/tests/: __init__.py
src/utils/: __init__.py  accuracy.py  input_utils.py  matrix.py
